подложка стекло, церный цвет шрифта на кнопках и ссылка на контакты из шапки

--- a/black/index.html
+++ b/black/index.html
@@ -473,18 +473,17 @@
             <h2>Часто задаваемый вопрос</h2>
           </div>
         </div>
+        <div class="text">
         <p class="text-center"><a target="_blank">Почему у вас такая низкая цена?</a></p>
-        <p>Мы предлагаем услуги видеосъёмки по доступным ценам, потому что работаем удалённо и не несем издержек на содержание офиса. Это позволяет предоставить нашим клиентам высококачественный продукт без лишних затрат, в кратчайшие сроки.</p>
+        <p class="text-center">Мы предлагаем услуги видеосъёмки по доступным ценам, потому что работаем удалённо и не несем издержек на содержание офиса. Это позволяет предоставить нашим клиентам высококачественный продукт без лишних затрат, в кратчайшие сроки.</p>
+        </div>
     </div>
   </section>
 
-  <div class="container">
-    <div class="probootstrap-cta probootstrap-animate border-bototm-none"></div>
-  </div>
   <!-- END: slider  -->
 
   <footer class="probootstrap-footer probootstrap-bg">
-  <section class="probootstrap-section probootstrap-animate border-bototm-none">
+  <section class="probootstrap-section probootstrap-animate border-bototm-none" id="contacts">
     <div class="container">
        <div class="reservation">
           <h2>Бронирование Даты</h2>
